gccida/c1/ix86_GOT_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/i386.c:5441:6: error: use of undeclared identifier 'ix86_GOT_alias_set_set'; did you mean 'ix86_GOT_alias_set'?
if ( ix86_GOT_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     ix86_GOT_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/i386.c:5439:10: note: 'ix86_GOT_alias_set' declared here
__int64  ix86_GOT_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/i386.c:5442:1: error: use of undeclared identifier 'ix86_GOT_alias_set_set'
ix86_GOT_alias_set_set = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/i386.c:5443:8: error: use of undeclared identifier 'ix86_GOT_alias_set_set'; did you mean 'ix86_GOT_alias_set'?
return ix86_GOT_alias_set_set; 
       ^~~~~~~~~~~~~~~~~~~~~~
       ix86_GOT_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/i386.c:5439:10: note: 'ix86_GOT_alias_set' declared here
__int64  ix86_GOT_alias_set( ) 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_GOT_alias_set/src/obj/i386.o] Error 1
